[package]
name = "incr-concurrent-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for the incr incremental computation engine"
license = "Apache-2.0"

[lib]
name = "incr_concurrent"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
incr_conc = { package = "incr-concurrent", path = "../incr-concurrent" }
