[package]
name = "incr-concurrent"
version = "0.1.0"
edition = "2021"
description = "Incremental computation engine with Send+Sync runtime for multi-threaded services"
license = "MIT"
repository = "https://github.com/Anyesh/incr"
keywords = ["incremental", "computation", "reactive", "concurrent", "dataflow"]
categories = ["algorithms", "data-structures", "concurrency"]

[dependencies]
rustc-hash = "2"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
salsa = "0.26"
crossbeam-epoch = "0.9"
rand = "0.8"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "collection_operators"
harness = false

[[bench]]
name = "concurrency_primitives"
harness = false

[[bench]]
name = "contended_concurrency"
harness = false
