[package]
name = "incr-core"
version = "0.1.0"
edition = "2021"
description = "General-purpose incremental computation engine"
license = "Apache-2.0"

[dependencies]
rustc-hash = "2"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
salsa = "0.26"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "collection_operators"
harness = false
