[package]
name = "incr-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for the incr incremental computation engine"
license = "Apache-2.0"

[lib]
name = "incr"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
incr-core = { path = "../incr-core" }
