[package]
name = "incr-concurrent-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
incr-concurrent = { path = "../../crates/incr-concurrent" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
