[package]
name = "incr-spreadsheet"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
incr-concurrent = { path = "../../crates/incr-concurrent" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
futures-util = "0.3"
